--- a/client/App.scss
+++ b/client/App.scss
@@ -59,10 +59,12 @@ header:first-child {
 }
 
 .categories {
+  margin-top: 20px;
   border-radius: 20px;
   padding: 20px;
   text-align: center;
 }
+
 
 .resource-container {
   border-radius: 15px;
@@ -98,6 +100,7 @@ label {
 .circle {
   display: inline;
   padding: 8px;
+  margin-right: 5px;
 }
 
 .firstrow-categories {
@@ -129,8 +132,12 @@ header h1 {
   color: rgb(202, 212, 223);
  }
 
+ .category {
+   text-align: center;
+ }
+
  h2 {
-  font-size: 3em;
+  font-size: 2.5em;
   line-height: 1.2;
   color: #89a;
   font-weight: 200;
@@ -184,6 +191,22 @@ h3 a:hover {
   margin-right: 5px;
 }
 
+.dots-divider {
+  text-align:center;
+}
+
+.dots {
+  font-size: 20px;
+  font-family: Times; // make sure ★ appears correctly
+  line-height: 1;
+  color: rgb(202, 212, 223);
+  
+  &::before {
+    content: '● ● ●';
+    letter-spacing: 3px;
+  }
+}
+
 /*
 	Ratings Stars
 	(with as little code as possible)
@@ -234,7 +257,7 @@ h3 a:hover {
   left:50%;
   transform: translate(-50%,-50%);
   padding: 10px 40px;
-  border:#1e2c3c 1px solid;
+  border:#1c222e 1px solid;
 }
 
 .display-block {
